--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -53,15 +53,68 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">主页</a></li>
-                        <li><a runat="server" href="~/About">关于</a></li>
-                        <li><a runat="server" href="~/Contact">联系方式</a></li>
+                        <li><a runat="server" href="~/About">版块</a></li>
+                        <li><a runat="server" href="~/Contact">帮助</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a  data-toggle="modal" data-target="#myModal1">登录</a>
+                        </li>
+                        <li>
+                          <a  data-toggle="modal" data-target="#myModal">注册</a> </li>
                     </ul>
                 </div>
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">注册</h4>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">注册</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+                <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel1">登录</h4>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">登录</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
+           
+
+            <div class="row">
+              <div class="col-md-4">
+                   <asp:ContentPlaceHolder ID="MenuContent" runat="server">
+                  </asp:ContentPlaceHolder>
+              </div>
+              <div class="col-md-8"> 
+                  <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                  </asp:ContentPlaceHolder>
+              </div>
+            </div>
             <hr />
             <footer>
                 <p>&copy; <%: DateTime.Now.Year %> - 我的 ASP.NET 应用程序</p>
